Fixed the alignment issue for mobile devices

--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ body {
     align-items: center;
     flex-direction: column;
     background-color: white;
+    padding-left: 45px;
     padding-right: 45px;
     width: 100%;
 }
